# src/api/dto/users.go
@@ -15,3 +15,7 @@ type LoginByUsername struct {
 	Username string `json:"username" binding:"required,min=3"`
 	Password string `json:"password" binding:"required,min=3"`
 }
+
+type RefreshToken struct {
+	RefreshToken string `json:"refreshToken"`
+}
